Fix text alignment

--- a/resources/sass/components/_article-card.scss
+++ b/resources/sass/components/_article-card.scss
@@ -20,6 +20,7 @@
 .blog-code {
 
     pre {
+        margin-left: -1rem;
         margin-top: 0;
         overflow: hidden;
         font-size: .8rem;
